# rob040

./: .gitignore  Makefile  fix_package.js  input  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: ci.yml
apps/server/: package.json  tsconfig.json
apps/server/prisma/: schema.prisma
apps/server/prisma/migrations/20250808214913_init/: migration.sql
apps/server/src/: index.ts
apps/web/: next.config.cjs  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
bootloader/: Cargo.toml
bootloader/src/: main.rs
docs/: README.md
kernel/: Cargo.toml
kernel/src/: main.rs
rob04-os/: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
rob04-os/docs/: ARCHITECTURE.md  ROADMAP.md  VISION.md
rob04-os/docs/RFCs/: 0001-rob04-architecture.md
rob04-os/rob04/: __init__.py  __main__.py  version.py
rob04-os/tests/: test_cli.py
